Name changes to builder interface